# TestToolKit

./: .gitignore  README.md
.github/workflows/: playwright.yml
playwrightPy/: .gitignore  Readme.md  playwright.config.py  pyproject.toml  requirements.txt
playwrightPy/e2e/: test_homePage.py
playwrightPy/pages/: BasePage.py  SmartTablePages.py  homePage.py
playwrightPy/pages/components/homePage/: Header.py  Menu.py  Temperature.py
playwrightSpecs/: Readme.md  package-lock.json  package.json  playwright.config.js
playwrightSpecs/.github/workflows/: playwright.yml
playwrightSpecs/e2e/: homePage.spec.js  tablePage.spec.js
playwrightSpecs/pages/: BasePage.js  HomePage.js  SmartTablePages.js
playwrightSpecs/pages/components/: Menu.js
playwrightSpecs/pages/components/homePage/: Header.js  Menu.js  Temperature.js
testApp/: angular.json  package-lock.json  package.json
testApp/src/app/@theme/components/header/: header.component.html
